@@ -1,5 +1,7 @@
 7 June 2012: Wouter
 	- tag 0.11 release.
+	- trunk is 0.12 is development.
+	- log correct type in timeout for TXT.
 
 6 June 2012: Wouter
 	- fix permissions on root key for OSX.
